# Project_C_2

./: .gitignore  CMakeLists.txt
include/model/: Camera.h  Camera.hpp  Mesh.h  Node.h  Object.h  Projection.h  Projection.hpp  Renderer.h  Scene.h  Scene.hpp  geometry.hpp  graphicPipeline.h  texture_types.hpp
src/model/: CMakeLists.txt  Camera.cpp  Projection.cpp
src/view/: CMakeLists.txt
